# ax-hackathon-kms-agent

./: .env.example  .gitignore  README.md  README.txt  config.py  fetch_url.py  package-lock.json  plan.md  pyproject.toml  run.py  start.sh  weekly_run.py  weekly_workflow_plan.md  workflow.md
docs/: architecture.md
kms/: _config.py  _feeds.py  _llm.py  _prompts.py  config.json  curate.py  db.py  draft.py  extract.py  feeds.txt  filter.py  keyword_extract.py  notion_topics.py  notion_writer.py  pipeline.py  search.py  seen_store.py  slack.py  sources.py  tracker.py  url_canonical.py  web.py
kms/prompts/: curate.md  draft.md  filter.md  keyword_extract.md
kms_slides_final/: lemonbase_kms_slides.html
scripts/launchd/: com.kms-agent.weekly.plist.template  install.sh  uninstall.sh
tests/: test_config.py  test_feeds.py  test_filter.py  test_notion_topics.py  test_notion_writer.py  test_pipeline_gates.py  test_seen_store.py  test_slack.py  test_url_canonical.py  test_weekly_run.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  types.ts
web/src/components/: Badge.tsx  PhaseDetail.tsx  PhaseStepper.tsx  RunCard.tsx
web/src/lib/: api.ts  usePolling.ts
web/src/pages/: Dashboard.tsx  Feeds.tsx  Prompts.tsx  Settings.tsx
